sc/inc/clipcontext.hxx
@@ -161,12 +161,15 @@ public:
 class CopyToClipContext final : public ClipContextBase
 {
     bool mbKeepScenarioFlags:1;
+    bool mbCopyChartRanges : 1 = false; // Copying ranges not included in selection:
+                                        // only copy data, not cell attributes
 
 public:
-    CopyToClipContext(ScDocument& rDoc, bool bKeepScenarioFlags);
+    CopyToClipContext(ScDocument& rDoc, bool bKeepScenarioFlags, bool bCopyChartRanges = false);
     virtual ~CopyToClipContext() override;
 
     bool isKeepScenarioFlags() const;
+    bool isCopyChartRanges() const { return mbCopyChartRanges; }
 };
 
 class CopyToDocContext final : public ClipContextBase
